fixed card-product__link-wrap

--- a/src/scss/layout/section/product-line.scss
+++ b/src/scss/layout/section/product-line.scss
@@ -137,7 +137,7 @@
     left: 32px;
     top: 32px;
     right: 32px;
-
+    z-index: 2;
     .link__icon {
       border: 1px solid #46B600;
       background-color: #FFFFFF;
